--- a/tests/index.html
+++ b/tests/index.html
@@ -22,11 +22,18 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-xs-1o2">Dit</div>
-        <div class="col-xs-1o4">is</div>
-        <div class="col-xs-1o8">flex</div>
-        <div class="col-xs-1o16">.</div>
-        <div class="col-xs-1o16">.</div>
+        <div class="col-1o2">Dit</div>
+        <div class="col-1o4">is</div>
+        <div class="col-1o8">flex</div>
+        <div class="col-1o16">.</div>
+        <div class="col-1o16">.</div>
+    </div>
+    <div class="row">
+        <div class="col-l-1o2">Dit</div>
+        <div class="col-l-1o4">is</div>
+        <div class="col-l-1o8">flex</div>
+        <div class="col-l-1o16">.</div>
+        <div class="col-l-1o16">.</div>
     </div>
 </div>
 </body>
