--- a/tests/index.html
+++ b/tests/index.html
@@ -16,6 +16,7 @@
 
         [class|="col"] {
             background: rgba(255, 0, 0, .25);
+            outline: 1px solid lime;
         }
     </style>
 </head>
