--- a/tests/index.html
+++ b/tests/index.html
@@ -5,6 +5,13 @@
     <title>deFlex</title>
     <link rel="stylesheet" href="../css/deflex.css">
     <style>
+        * {
+            border: 0;
+            margin: 0;
+            outline: 0;
+            padding: 0;
+        }
+
         .container {
             background-color: rgba(0, 255, 0, .25);
         }
